<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProyecytoNotificacionesGoogle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gcm_but">GCM</string>
    <string name="gcm_text">Google Cloud Messaging</string>
    <string name="registro_but">Registro</string>
    <string name="registro_text">Registrar en el servidor</string>
    <string name="welcome">Aplicacion de notificaciones</string>

</resources>
